--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -21,8 +21,18 @@ jobs:
   automerge:
     runs-on: ubuntu-latest
     steps:
+      - name: Create issue using REST API
+        run: |
+         curl --request POST \
+         --url https://api.github.com/repos/${{ github.repository }}/issues \
+         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+         --header 'content-type: application/json' \
+         --data '{
+           "title": "Automated issue for commit: ${{ github.sha }}",
+           "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
+          }'
       - name: automerge
-        uses: "pascalgn/automerge-action@v0.11.0"
+        uses: pascalgn/automerge-action@v0.11.0
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
